$Id: ChangeLog,v 1.197 2006/09/08 19:48:12 andete Exp $

2006-09-09  Arnold Metselaar  <arnold.metselaar@planet.nl>
   * src/main.asm, Makefile: Move version.asm from derived/src to derived/asm. 
   * Makefile: Copy all source files to derived/asm if tniasm is used,  because
     tniasm cannot handle paths in include and incbin. 

2006-09-08 Joost Yervante Damad <joost@lumatec.be>
    * add more documentation to systemvars
    * convert some source file from ISO-8859-1 to UTF8

2006-09-07 Joost Yervante Damad <joost@lumatec.be>
    * add more documentation to systemvars
    * add list_stub target to Makefile

2006-07-22 Albert Beevendorp
    * removed the page 0 detection for cartidges to make it
      compliant to the original version again.

2006-05-07 Albert Beevendorp
    * made preparations for ChangeLog version number to the
      default bootscreen using make.bat

2006-05-07 Eric Boon <eric@auroramsx.nl>
    * Added Changelog version number to default bootup screen
    * Implemented EOL

2006-05-02 Maarten ter Huurne <maarten@treewalker.org>
    * Use 14-bit addressing in FILVRM for SCREEN 0..4.
      Fixes Konami's Ping Pong on MSX2/2+.

2006-04-09 Albert Beevendorp
    * added printer output routines

2006-03-18 Eric Boon <eric@auroramsx.nl>
    * completed CHPUT with update of LINTTB

2006-03-12 Eric Boon <eric@auroramsx.nl>
    * Rewrote CHPUT and separated it from main.asm

2006-03-12  Arnold Metselaar <arnold.metselaar@planet.nl>
    * Makefile: add support for GNU assembler
    * src/main.asm: use single quotes for character constants

2005-12-06 Jussi Pitkänen <ccfg@pp.inet.fi>
    * Added international scan code table.
    * Added numpad (rows 9 and 10) to scan code tables.

2005-11-25 Jussi Pitkänen <ccfg@pp.inet.fi>
    * Improved the RAM search routine:
      - check each memory slot configuration
      - find the start of the longest contiguous memory area and set the
        BOTTOM variable accordingly
